# yourday

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
tests/: __init__.py
yourday/: __init__.py  cli.py  config.py  exceptions.py
yourday/agent/: __init__.py  yourday_agent.py
yourday/clients/: __init__.py  news_client.py  obsidian_client.py  weather_client.py
